fix(document): increase scroll margin, align icon with text, make icon brighter and smaller

--- a/assets/app/main.css
+++ b/assets/app/main.css
@@ -136,13 +136,16 @@ img{
     grid-template-columns: max-content max-content;
     gap: 10px;
     align-items: center;
-    margin-top: 5px;
+    margin-top: 0px;
     margin-bottom: 10px;
 }
 
 .box_image{
-    width: 24px;
-    height: 24px;
+    width: 18px;
+    height: 18px;
+    filter: brightness(2);
+    position: relative;
+    top: -2px;
 }
 
 .bottom_update{
